@@ -141,8 +141,10 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
-                        <phase>package</phase> <!-- bind to the packaging phase -->
+                        <id>make-assembly</id>
+                        <!-- this is used for inheritance merges -->
+                        <phase>package</phase>
+                        <!-- bind to the packaging phase -->
                         <goals>
                             <goal>single</goal>
                         </goals>
@@ -203,6 +205,15 @@
                 </executions>
             </plugin>
             <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <forkCount>4</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-XX:MaxPermSize=176m</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.3</version>
@@ -218,14 +229,24 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.10</version>
+                <version>2.12</version>
                 <configuration>
+                    <fork>true</fork>
                     <enableRulesSummary>false</enableRulesSummary>
                     <configLocation>checkstyle-config.xml</configLocation>
-                    <excludes>
-                        com/sharethis/mongodb/mojo/HelpMojo.*
-                    </excludes>
+                    <excludes>com/sharethis/mongodb/mojo/HelpMojo.*</excludes>
                 </configuration>
+                <!-- does not work. executing goal 'site' throws exception-->
+                <!--ERROR] Failed to execute goal org.apache.maven.plugins:maven-site-plugin:3.3:site (default-site) on project mongomigration: failed to get report for org.apache.maven.plugins:maven-surefire-report-plugin: Failed to execute goal org.apache.maven.plugins:maven-surefire-plugin:2.17:test (default-test) on project mongomigration: Unable to parse configuration of mojo org.apache.maven.plugins:maven-surefire-plugin:2.17:test for parameter excludes: Cannot assign configuration entry 'excludes' with value 'com/sharethis/mongodb/mojo/HelpMojo.*' of type java.lang.String to property of type java.util.List-->
+                <!--executions>
+                    <execution>
+                        <id>checkstyle-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <phase>test</phase>
+                    </execution>
+                </executions-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -233,21 +254,40 @@
                 <version>3.0.1</version>
                 <configuration>
                     <excludes>
-                        <exclude>**com/sharethis/mongodb/mojo/HelpMojo.*</exclude>
+                        <exclude>com/sharethis/mongodb/mojo/HelpMojo.*</exclude>
                     </excludes>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>pmd-check</id>
+                        <goals>
+                            <goal>check</goal>
+                            <goal>cpd</goal>
+                        </goals>
+                        <phase>test</phase>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
                 <version>${findbugs.version}</version>
                 <configuration>
-                    <fork>false</fork>
+                    <fork>true</fork>
                     <xmlOutput>true</xmlOutput>
                     <xmlOutputDirectory>target/site</xmlOutputDirectory>
                     <outputDirectory>target/site</outputDirectory>
                     <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>findbugs-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <phase>test</phase>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -299,22 +339,6 @@
                         <exclude>**com/sharethis/mongodb/main/**</exclude>
                         <exclude>**com/sharethis/mongodb/mojo/MigrationsMojo.*</exclude>
                     </excludes>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.2.1</version>
-                <configuration>
-                    <executable>mvn</executable>
-                    <arguments>
-                        <argument>clean</argument>
-                        <argument>verify</argument>
-                        <argument>checkstyle:check</argument>
-                        <argument>pmd:check</argument>
-                        <argument>pmd:cpd</argument>
-                        <argument>findbugs:check</argument>
-                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
@@ -430,8 +454,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.10</version>
+                <version>2.12</version>
                 <configuration>
+                    <fork>true</fork>
                     <enableRulesSummary>false</enableRulesSummary>
                     <configLocation>checkstyle-config.xml</configLocation>
                     <excludes>**com/sharethis/mongodb/mojo/HelpMojo.*</excludes>
@@ -443,7 +468,7 @@
                 <version>3.0.1</version>
                 <configuration>
                     <excludes>
-                        <exclude>**com/sharethis/mongodb/mojo/HelpMojo.*</exclude>
+                        <exclude>com/sharethis/mongodb/mojo/HelpMojo.*</exclude>
                     </excludes>
                 </configuration>
             </plugin>
@@ -455,7 +480,7 @@
                     <xmlOutput>true</xmlOutput>
                     <xmlOutputDirectory>target/site</xmlOutputDirectory>
                     <outputDirectory>target/site</outputDirectory>
-                    <fork>false</fork>
+                    <fork>true</fork>
                     <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
                 </configuration>
             </plugin>
@@ -463,7 +488,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.16</version>
+                <version>2.17</version>
+                <configuration>
+                    <forkCount>2</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-XX:MaxPermSize=176m</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </reporting>
